2007-01-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/8.html:
	* browser-plugin/tests/playlist-with-static-png.asx:
	Add a copy of test 7 but with a PNG image

2007-01-16  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/README: add MOZ_PLUGIN_PATH doc
	* browser-plugin/tests/7.html: 
	* browser-plugin/tests/playlist-with-static.asx:
	Add test for http://bugzilla.gnome.org/show_bug.cgi?id=358277
	* browser-plugin/tests/launch-web-server.sh:
	add a --remote option to allow remote machines to connect to
	our test cases, and remove the "ADDRESS" hack

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-wm.c:
	(totem_pl_parser_add_asf_parser), (totem_pl_parser_is_asf):
	Special-case NSC parsing

2007-01-15 Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer-options.h:
	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_construct),
	(main):
	* browser-plugin/totemPlugin.cpp: revert the browser plugin parts of the
	previous commit, and simply pass on the *real* width and height from
	the SetWindow call (Closes: #364572)

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer-options.h:
	* browser-plugin/totem-plugin-viewer.c: (main):
	* browser-plugin/totemPlugin.cpp:
	Pass the width and height of the video display to the backend
	when showing only the video (controllers are hidden)

	* src/backend/bacon-video-widget-common.h:
	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new):
	* src/backend/bacon-video-widget-xine.c: (load_video_out_driver):
	When the requested video widget is smaller than 200x120, use the
	non-Xv video output, useful so that small QuickTime "image" streams
	don't hog the Xv port

	(Closes: #364572)

2007-01-15  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_construct):
	Turn on visualisations by default (Closes: #395409)
	* src/backend/bacon-video-widget-gst-0.10.c: