@@ -1,5 +1,13 @@
 2007-01-16  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_set_state),
+	(totem_embedded_set_logo_by_name), (totem_embedded_push_parser):
+	Go to the STOPPED state when we set an logo/error image, only "show"
+	an error when we failed to parse a playlist, and go to the logo
+	state after parsing an empty playlist (Closes: #350456)
+
+2007-01-16  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/tests/8.html:
 	* browser-plugin/tests/playlist-with-static-png.asx:
 	Add a copy of test 7 but with a PNG image
